<!--
  ~ Copyright 2023 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">Firebase Remote Config Test App</string>
  <string name="firebase_greetings">Greetings from Firebase!</string>
  <string name="clear">clear</string>
  <string name="fetch_and_activate_config">Fetch &amp; Activate </string>
  <string name="fetch_config">Fetch Config</string>
  <string name="activate_config">Activate Config</string>
  <string name="get_active_config">Get Active Config</string>
  <string name="crashlytics_label">Crashlytics</string>
  <string name="jvm_crash">JVM Crash</string>
  <string name="anr">ANR</string>
  <string name="on_demand_fatal">On-demand Fatal</string>
  <string name="non_fatal">Non Fatal</string>
</resources>
